--- a/Homework3/test/HW3.ipynb
+++ b/Homework3/test/HW3.ipynb
@@ -53,6 +53,7 @@
     }
    ],
    "source": [
+    "##Verify Example 3.12 (p117)\n",
     "n=15\n",
     "A=np.zeros((n,n))\n",
     "M=np.zeros((n,n))\n",
@@ -131,7 +132,7 @@
     }
    ],
    "source": [
-    "\n",
+    "##第四题\n",
     "A=np.zeros((10,10))\n",
     "for i in range(10):\n",
     "    A[i,i]=10\n",
@@ -184,6 +185,8 @@
     }
    ],
    "source": [
+    "## T11\n",
+    "## GD is convregent becasu A is s.p.d\n",
     "A=np.array([(3,2),(2,6)])\n",
     "b=np.array([(2,-8)]).T\n",
     "A_inv=np.linalg.inv(A)\n",
