--- a/Homework3/test/HW3.ipynb
+++ b/Homework3/test/HW3.ipynb
@@ -568,10 +568,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##Implement Program 21 and 22, and verify Example 4.9.\n",
+    "\n",
     "n = 100\n",
-    "\n",
     "tol = 0.0000000001\n",
-    "\n",
     "#get A\n",
     "A = np.zeros([n,n])\n",
     "for i in range(n):\n",
@@ -580,9 +580,7 @@
     "    A[i][i+1] = -1\n",
     "for i in range(1,n):\n",
     "    A[i][i-1] = -1\n",
-    "\n",
     "b = np.dot(A,np.ones([n]))\n",
-    "\n",
     "\n",
     "def GSarnoldi(A, m, k, V, H, n):\n",
     "    k += 1\n",
@@ -593,8 +591,6 @@
     "    w = np.dot(A,V) - s\n",
     "    k =m+1\n",
     "    return K, V, H \n",
-    "\n",
-    "\n",
     "\n",
     "def arnoldialg(A, v, m, n):\n",
     "    s = 0\n",
